Working prototype of image loading and editing Use Webpack, React, Jimp, Fabric, TypeScript.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2015",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node"
+    "noImplicitAny": false,
+    "moduleResolution": "node",
+    "jsx": "react",
+    "sourceMap": true,
+    "module": "commonjs",
+    "isolatedModules": true
   },
-  "compileOnSave": true
+  "compileOnSave": true,
+  "exclude": [
+    "node_modules"
+  ]
 }
