--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "fabric-demo",
+  "name": "case-wizard",
   "version": "1.0.0",
   "description": "",
-  "main": "fabric.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack:validate": "webpack-validator webpack.config.js",
+    "dev": "NODE_ENV=development HOT=1 babel-node devServer.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,46 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
-    "lodash": "^4.14.2"
+    "classnames": "^2.2.5",
+    "express": "^4.14.0",
+    "fabric": "^1.6.3",
+    "jimp": "^0.2.27",
+    "lodash": "^4.14.2",
+    "material-ui": "^0.15.4",
+    "moment": "^2.14.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-dropzone": "^3.5.3",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "react-tap-event-plugin": "^1.0.0",
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-fail-plugin": "^1.0.5",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-html-plugin": "^0.1.1"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-3": "^6.11.0",
+    "babel-register": "^6.11.6",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.0.0",
+    "react-svg-loader": "^1.1.1",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2",
+    "url-loader": "^0.5.7",
+    "webpack-validator": "^2.2.7",
+    "worker-loader": "^0.7.1"
   }
 }
