Upgrade to TypeScript 2 with strictNullChecks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,22 @@
     "target": "es2015",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "moduleResolution": "node",
     "jsx": "react",
     "sourceMap": true,
     "module": "commonjs",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    "traceResolution": true,
+    "noImplicitReturns": true,
+    "pretty": true,
+    "noUnusedParameters": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noImplicitThis": true,
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true
   },
   "compileOnSave": true,
   "exclude": [
