Whole bunch of things   * Comments everywhere   * Debug with Chrome   * npm as task runner for VSCode   * Start writing unit tests with mocha and ts-node   * Lots of fixs in <CephaloEditor/>   [analyses] Update interfaces and helpers     * Add common points and lines as constants with descriptions     * Comply to strictNullChecks     * Extract function getSymbolForAngle     * line() only accepts points now     * calculateAngleBetweenLines -> calculateAngleBetweenTwoLines     * Use T[] notation instead of Array<T>     * Handle linear measurements units

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2015",
+    "lib": [
+        "es5",
+        "es2015",
+        "webworker",
+        "dom"
+    ],
+    "outDir": "build/",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
@@ -22,6 +29,7 @@
   },
   "compileOnSave": true,
   "exclude": [
-    "node_modules"
+      "node_modules",
+      "src/**/*.test.ts"
   ]
 }
