--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/**/*.test.* --compilers ts:ts-node/register,tsx:ts-node/register",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js"
   },
@@ -31,6 +31,7 @@
     "react-dropzone": "^3.5.3",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-tap-event-plugin": "^1.0.0",
+    "topsort": "0.0.2",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-fail-plugin": "^1.0.5",
@@ -52,9 +53,13 @@
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.0.0",
+    "expect": "^1.20.2",
+    "expect-jsx": "^2.6.0",
+    "mocha": "^3.0.2",
     "react-svg-loader": "^1.1.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
+    "ts-node": "^1.2.3",
     "typescript": "^2.0.0",
     "typings": "^1.3.2",
     "url-loader": "^0.5.7",
