First implementation of anaylsis walkthrough

--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "expect": "^1.20.2",
     "expect-jsx": "^2.6.0",
     "mocha": "^3.0.2",
+    "node-sass": "^3.8.0",
     "react-svg-loader": "^1.1.1",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "ts-node": "^1.2.3",
