Add production build command * Refactor webpack config * Add more packages to vendor * Optimize react code with babel-preset-react-optimize

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,12 @@
     ],
     "react",
     "stage-3"
-  ]
+  ],
+  "env": {
+    "production": {
+      "presets": [
+        "react-optimize"
+      ]
+    }
+  }
 }
