--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "fabric": "^1.6.3",
