Image loading improvement * Support batch actions * Support isCephalo action * Show a snackbar when image is not probably a cephalometric radiograph * Move Jimp and its definition to a separate file

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.11.6",
+    "carte-blanche": "^0.3.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
@@ -58,6 +59,7 @@
     "eslint-plugin-react": "^6.0.0",
     "expect": "^1.20.2",
     "expect-jsx": "^2.6.0",
+    "file-loader": "^0.9.0",
     "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
     "react-svg-loader": "^1.1.1",
