--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-dom": "^15.3.0",
     "react-dropzone": "^3.5.3",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
     "topsort": "0.0.2",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
