--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-actions": "^0.12.0",
     "topsort": "0.0.2",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
