--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "redux-saga": "^0.11.1",
     "topsort": "0.0.2",
     "webpack": "^2.1.0-beta.20",
+    "url-loader": "^0.5.7",
+    "webpack-dashboard": "^0.1.8",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-fail-plugin": "^1.0.5",
     "webpack-hot-middleware": "^2.12.2",
@@ -72,7 +74,6 @@
     "ts-node": "^1.2.3",
     "typescript": "^2.0.2",
     "typings": "^1.3.3",
-    "url-loader": "^0.5.7",
     "webpack-validator": "^2.2.7",
     "worker-loader": "^0.7.1"
   }
