--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "mocha src/**/*.test.* --compilers ts:ts-node/register,tsx:ts-node/register",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
-    "prod": "rm -rf build/**/* && NODE_ENV=production webpack"
+    "prod": "rm -rf build/**/*.{js,jpg,png,svg,html,log,css} && NODE_ENV=production webpack --bail --progress"
   },
   "repository": {
     "type": "git",
@@ -51,6 +51,7 @@
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-optimize": "^1.0.1",
