Finish initial work on adding landmarks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "module": "commonjs",
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
-    "traceResolution": true,
+    "traceResolution": false,
     "noImplicitReturns": true,
     "pretty": true,
     "noUnusedParameters": true,
