Make components pure

--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
+    "recompose": "^0.20.2",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
     "redux-saga": "^0.11.1",
     "topsort": "0.0.2",
-    "webpack": "^2.1.0-beta.20",
     "url-loader": "^0.5.7",
+    "webpack": "^2.1.0-beta.20",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-fail-plugin": "^1.0.5",
