--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "^15.3.0",
     "react-dropzone": "^3.5.3",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.0-beta.1",
     "react-tap-event-plugin": "^1.0.0",
     "recompose": "^0.20.2",
     "redux": "^3.6.0",
