--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "classnames": "^2.2.5",
+    "deep-diff": "^0.3.4",
     "express": "^4.14.0",
     "fabric": "^1.6.3",
     "jimp": "^0.2.27",
