Add url to attach debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,8 @@
       "request": "attach",
       "port": 9222,
       "sourceMaps": true,
-      "webRoot": "${workspaceRoot}"
+      "webRoot": "${workspaceRoot}",
+      "url": "localhost:8080"
     }
   ]
 }
