--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
+  "sourceMaps": "both",
   "presets": [
     [
       "es2015",
@@ -17,6 +18,7 @@
       "presets": [
         "react-optimize"
       ]
-    }
+    },
+    "sourceMaps": false
   }
 }
