--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/classnames": "0.0.28",
     "@types/expect": "^1.13.29",
     "@types/lodash": "^4.14.34",
+    "@types/material-ui": "^0.15.36",
     "@types/mocha": "^2.2.31",
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
