--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-react": "^6.0.0",
     "expect": "^1.20.2",
     "expect-jsx": "^2.6.0",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
     "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
