--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "bowser": "^1.4.6",
     "classnames": "^2.2.5",
     "deep-diff": "^0.3.4",
     "express": "^4.14.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.33",
+    "@types/bowser": "^1.0.30",
     "@types/classnames": "0.0.28",
     "@types/expect": "^1.13.29",
     "@types/lodash": "^4.14.34",
