--- a/package.json
+++ b/package.json
@@ -21,20 +21,36 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "@types/expect": "^1.13.30",
+    "@types/lodash": "^4.14.36",
+    "@types/mocha": "^2.2.32",
+    "@types/react": "^0.14.37",
+    "@types/react-dom": "^0.14.17",
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.16.3",
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
     "deep-diff": "^0.3.4",
+    "eslint": "^3.7.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "express": "^4.14.0",
-    "fabric": "^1.6.3",
+    "fabric": "^1.6.4",
     "jimp": "^0.2.27",
-    "lodash": "^4.14.2",
+    "lodash": "^4.16.2",
     "material-ui": "^0.15.4",
-    "moment": "^2.14.1",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "mocha": "^3.1.0",
+    "moment": "^2.15.1",
+    "node-sass": "^3.10.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-dropzone": "^3.5.3",
-    "react-hot-loader": "^3.0.0-beta.2",
+    "react-hot-loader": "^3.0.0-beta.5",
     "react-redux": "^5.0.0-beta.1",
     "react-tap-event-plugin": "^1.0.0",
     "recompose": "^0.20.2",
@@ -42,14 +58,18 @@
     "redux-actions": "^0.12.0",
     "redux-saga": "^0.11.1",
     "reselect": "^2.5.4",
+    "sass-loader": "^4.0.2",
     "topsort": "0.0.2",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.20",
+    "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.1.8",
-    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-middleware": "^1.8.3",
     "webpack-fail-plugin": "^1.0.5",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-html-plugin": "^0.1.1"
+    "webpack-html-plugin": "^0.1.1",
+    "webpack-validator": "^2.2.8"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.33",
