Use autoprefixer for CSS

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/react-dropzone": "0.0.27",
     "@types/react-tap-event-plugin": "0.0.29",
     "@types/webpack": "^1.12.34",
+    "autoprefixer": "^6.5.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
@@ -105,6 +106,7 @@
     "file-loader": "^0.9.0",
     "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
+    "postcss-loader": "^0.13.0",
     "react-svg-loader": "^1.1.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
