--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,16 @@
   "sourceMaps": "both",
   "presets": [
     [
-      "es2015",
+      "env",
       {
-        "modules": false
+        "modules": false,
+        "targets": {
+          "chrome": 52,
+          "firefox": 45,
+          "edge": 13,
+          "safari": 9,
+          "node": 6
+        }
       }
     ],
     "react",
