--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-env": "0.0.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-optimize": "^1.0.1",
