--- a/package.json
+++ b/package.json
@@ -112,6 +112,8 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "ts-node": "^1.2.3",
+    "tslint": "^3.15.1",
+    "tslint-config-ms-recommended": "^0.1.2",
     "typescript": "^2.0.2",
     "typings": "^1.3.3",
     "webpack-validator": "^2.2.7",
