Handle props on new SVG canvas implementation
* The performance seems to be much more better
* We do not have to include or use Jimp to read files as data URL. Remove for now.
* Implement flipX, flipY
* Still have work on invert filter

--- a/modernizr-config.json
+++ b/modernizr-config.json
@@ -3,7 +3,6 @@
   "options": [],
   "feature-detects": [
     "test/blob",
-    "test/canvas",
     "test/eventlistener",
     "test/indexeddb",
     "test/indexeddbblob",
@@ -11,6 +10,7 @@
     "test/json",
     "test/serviceworker",
     "test/svg",
+    "test/svg/filters",
     "test/css/animations",
     "test/css/flexbox",
     "test/es6/number",
