--- a/package.json
+++ b/package.json
@@ -21,100 +21,78 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
-    "@types/expect": "^1.13.30",
-    "@types/lodash": "^4.14.36",
-    "@types/mocha": "^2.2.32",
-    "@types/react": "^0.14.37",
-    "@types/react-dom": "^0.14.17",
-    "babel-cli": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.16.3",
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
-    "eslint": "^3.7.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
-    "express": "^4.14.0",
-    "fabric": "^1.6.4",
-    "jimp": "^0.2.27",
-    "lodash": "^4.16.2",
-    "material-ui": "^0.15.4",
-    "mocha": "^3.1.0",
+    "lodash": "^4.16.4",
+    "material-ui": "^0.16.0",
     "moment": "^2.15.1",
-    "node-sass": "^3.10.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-dropzone": "^3.5.3",
+    "react-dropzone": "^3.6.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-redux": "^5.0.0-beta.1",
     "react-tap-event-plugin": "^1.0.0",
     "recompose": "^0.20.2",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
-    "redux-saga": "^0.11.1",
-    "reselect": "^2.5.4",
+    "redux-saga": "^0.12.0",
+    "reselect": "^2.5.4"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.0.35",
+    "@types/bowser": "^1.0.30",
+    "@types/classnames": "0.0.31",
+    "@types/expect": "^1.13.30",
+    "@types/lodash": "^4.14.37",
+    "@types/mocha": "^2.2.32",
+    "@types/react": "^0.14.41",
+    "@types/react-dom": "^0.14.17",
+    "@types/react-dropzone": "0.0.28",
+    "@types/react-tap-event-plugin": "0.0.30",
+    "@types/recompose": "^0.20.1",
+    "@types/webpack": "^1.12.35",
+    "autoprefixer": "^6.5.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.16.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.16.3",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "expect": "^1.20.2",
+    "expect-jsx": "^2.6.0",
+    "exports-loader": "^0.6.3",
+    "express": "^4.14.0",
+    "file-loader": "^0.9.0",
+    "mocha": "^3.1.2",
+    "node-sass": "^3.10.1",
+    "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
-    "topsort": "0.0.2",
+    "style-loader": "^0.13.1",
+    "svg-react-loader": "^0.4.0-beta.2",
+    "svgo-loader": "^1.1.0",
+    "ts-loader": "^0.9.1",
+    "ts-node": "^1.4.3",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-middleware": "^1.8.3",
+    "webpack-dashboard": "^0.2.0",
+    "webpack-dev-middleware": "^1.8.4",
     "webpack-fail-plugin": "^1.0.5",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack-hot-middleware": "^2.13.0",
     "webpack-html-plugin": "^0.1.1",
-    "webpack-validator": "^2.2.8"
-  },
-  "devDependencies": {
-    "@types/bluebird": "^3.0.33",
-    "@types/bowser": "^1.0.30",
-    "@types/classnames": "0.0.28",
-    "@types/expect": "^1.13.29",
-    "@types/lodash": "^4.14.34",
-    "@types/mocha": "^2.2.31",
-    "@types/react": "^0.14.34",
-    "@types/react-dom": "^0.14.16",
-    "@types/react-dropzone": "0.0.27",
-    "@types/react-tap-event-plugin": "0.0.29",
-    "@types/recompose": "^0.20.1",
-    "@types/webpack": "^1.12.34",
-    "autoprefixer": "^6.5.0",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-3": "^6.11.0",
-    "babel-register": "^6.11.6",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.0.0",
-    "expect": "^1.20.2",
-    "expect-jsx": "^2.6.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.9.0",
-    "mocha": "^3.0.2",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.13.0",
-    "react-svg-loader": "^1.1.1",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.2",
-    "ts-node": "^1.2.3",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.3",
-    "webpack-validator": "^2.2.7",
+    "webpack-validator": "^2.2.9",
     "worker-loader": "^0.7.1"
   }
 }
