--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
     "redux-saga": "^0.12.0",
+    "redux-undo": "^0.6.1",
     "reselect": "^2.5.4"
   },
   "devDependencies": {
