Try implementing zoom

--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "@types/classnames": "0.0.31",
     "@types/expect": "^1.13.30",
     "@types/lodash": "^4.14.37",
+    "@types/material-ui": "^0.15.37",
     "@types/mocha": "^2.2.32",
-    "@types/react": "^0.14.41",
-    "@types/react-dom": "^0.14.17",
+    "@types/react-dom": "^0.14.18",
     "@types/react-dropzone": "0.0.28",
     "@types/react-tap-event-plugin": "0.0.30",
     "@types/recompose": "^0.20.1",
+    "@types/redux-actions": "^0.8.30",
     "@types/webpack": "^1.12.35",
     "autoprefixer": "^6.5.0",
     "babel": "^6.5.2",
