--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
   "compileOnSave": true,
   "exclude": [
       "node_modules",
-      "src/**/*.test.ts"
+      "src/**/*.test.ts",
+      "docs/**"
   ]
 }
