--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux-actions": "^0.12.0",
     "redux-saga": "^0.12.0",
     "redux-undo": "^0.6.1",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "resize-observer-polyfill": "^1.1.4"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
