Continue work on refacturing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,14 +29,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "store/*": [
+      "*": [
         "*",
-        "src/store/reducers/*",
-        "src/store/*"
-      ],
-      "utils/*": [
-        "*",
-        "src/utils/*"
+        "src/*"
       ]
     }
   },
