--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-draggable": "^2.2.2",
     "react-dropzone": "^3.6.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-redux": "^5.0.0-beta.1",
@@ -46,13 +47,17 @@
     "@types/bowser": "^1.0.30",
     "@types/classnames": "0.0.31",
     "@types/expect": "^1.13.30",
+    "@types/express": "^4.0.33",
     "@types/lodash": "^4.14.37",
     "@types/material-ui": "^0.15.37",
     "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.45",
     "@types/react-dom": "^0.14.18",
     "@types/react-dropzone": "0.0.28",
+    "@types/react-redux": "^4.4.32",
     "@types/react-tap-event-plugin": "0.0.30",
     "@types/recompose": "^0.20.1",
+    "@types/redux": "^3.6.31",
     "@types/redux-actions": "^0.8.30",
     "@types/webpack": "^1.12.35",
     "autoprefixer": "^6.5.0",
