--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/material-ui": "^0.15.37",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.45",
+    "@types/react": "^0.14.43",
     "@types/react-dom": "^0.14.18",
     "@types/react-dropzone": "0.0.28",
     "@types/react-redux": "^4.4.32",
