--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux-saga": "^0.12.0",
     "redux-undo": "^0.6.1",
     "reselect": "^2.5.4",
-    "resize-observer-polyfill": "^1.1.4"
+    "resize-observer-polyfill": "^1.1.4",
+    "scroll-into-view-if-needed": "^1.0.3"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
