--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,7 @@
     "**/.DS_Store": true,
     "**/docs": true,
     "src/assets": true
-  }
+  },
+  "eslint.autoFixOnSave": true,
+  "tslint.autoFixOnSave": true
 }
