--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "babel-plugin-minify-empty-function": "^0.0.1",
+    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
+    "babel-plugin-transform-node-env-inline": "^6.8.0",
+    "babel-plugin-transform-remove-console": "^6.8.0",
+    "babel-plugin-transform-remove-debugger": "^6.8.0",
+    "babel-preset-babili": "^0.0.8",
+    "babel-preset-env": "^0.0.7",
+    "babili": "^0.0.8",
+    "babili-webpack-plugin": "^0.0.6",
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
