--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "babel-cli": "^6.18.0",
     "babel-plugin-minify-empty-function": "^0.0.1",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-node-env-inline": "^6.8.0",
@@ -77,7 +78,6 @@
     "@types/redux-actions": "^0.8.30",
     "@types/webpack": "^1.12.35",
     "autoprefixer": "^6.5.0",
-    "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
