--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,5 @@
     "src/assets": true
   },
   "eslint.autoFixOnSave": true,
-  "tslint.autoFixOnSave": true,
-  "editor.tabSize": 2
+  "tslint.autoFixOnSave": true
 }
