--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "@types/jszip": "^0.0.31",
     "babel-cli": "^6.18.0",
     "babel-plugin-minify-empty-function": "^0.0.1",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
@@ -37,6 +38,7 @@
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
+    "jszip": "^3.1.3",
     "lodash": "^4.16.4",
     "material-ui": "^0.16.0",
     "moment": "^2.15.1",
