Alias react to preact

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "lodash": "^4.16.4",
     "material-ui": "^0.16.0",
     "moment": "^2.15.1",
+    "preact": "^6.4.0",
+    "preact-compat": "^3.9.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-draggable": "^2.2.2",
