--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "@types/file-saver": "^0.0.0",
     "@types/jszip": "^0.0.31",
     "babel-cli": "^6.18.0",
     "babel-plugin-minify-empty-function": "^0.0.1",
@@ -38,6 +39,7 @@
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
+    "file-saver": "^1.3.3",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
     "material-ui": "^0.16.0",
