--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
     "file-saver": "^1.3.3",
+    "idb-keyval": "^2.1.2",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
     "material-ui": "^0.16.0",
@@ -58,7 +59,8 @@
     "resize-observer-polyfill": "^1.1.4",
     "scroll-into-view-if-needed": "^1.0.4",
     "serviceworker-webpack-plugin": "^0.1.6",
-    "sw-toolbox": "^3.4.0"
+    "sw-toolbox": "^3.4.0",
+    "typescript": "^2.0.10"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
