--- a/package.json
+++ b/package.json
@@ -24,16 +24,6 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-minify-empty-function": "^0.0.1",
-    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
-    "babel-plugin-transform-node-env-inline": "^6.8.0",
-    "babel-plugin-transform-remove-console": "^6.8.0",
-    "babel-plugin-transform-remove-debugger": "^6.8.0",
-    "babel-preset-babili": "^0.0.8",
-    "babel-preset-env": "^0.0.7",
-    "babili": "^0.0.8",
-    "babili-webpack-plugin": "^0.0.6",
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
@@ -41,15 +31,15 @@
     "idb-keyval": "^2.1.2",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
-    "material-ui": "^0.16.0",
+    "material-ui": "^0.16.4",
     "moment": "^2.15.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
     "react-draggable": "^2.2.2",
     "react-dropzone": "^3.6.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-redux": "^5.0.0-beta.1",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.20.2",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
@@ -59,8 +49,7 @@
     "resize-observer-polyfill": "^1.1.4",
     "scroll-into-view-if-needed": "^1.0.4",
     "serviceworker-webpack-plugin": "^0.1.6",
-    "sw-toolbox": "^3.4.0",
-    "typescript": "^2.0.10"
+    "sw-toolbox": "^3.4.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
@@ -71,28 +60,37 @@
     "@types/file-saver": "^0.0.0",
     "@types/jszip": "^0.0.31",
     "@types/lodash": "^4.14.37",
-    "@types/material-ui": "^0.15.37",
+    "@types/material-ui": "^0.16.40",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.45",
-    "@types/react": "^0.14.43",
+    "@types/react": "^0.14.49",
     "@types/react-dom": "^0.14.18",
     "@types/react-dropzone": "0.0.28",
     "@types/react-redux": "^4.4.32",
-    "@types/react-tap-event-plugin": "0.0.30",
+    "@types/react-tap-event-plugin": "^0.0.30",
     "@types/recompose": "^0.20.1",
     "@types/redux": "^3.6.31",
     "@types/redux-actions": "^0.8.30",
     "@types/webpack": "^1.12.35",
     "autoprefixer": "^6.5.0",
-    "babel-cli": "^6.16.0",
+    "babel-cli": "^6.18.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-minify-empty-function": "^0.0.1",
+    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
+    "babel-plugin-transform-node-env-inline": "^6.8.0",
+    "babel-plugin-transform-remove-console": "^6.8.0",
+    "babel-plugin-transform-remove-debugger": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-babili": "^0.0.8",
+    "babel-preset-env": "^0.0.7",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.16.3",
+    "babili": "^0.0.8",
+    "babili-webpack-plugin": "^0.0.6",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
@@ -116,8 +114,8 @@
     "ts-node": "^1.4.3",
     "tslint": "^3.15.1",
     "tslint-react": "^1.1.0",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0",
+    "typescript": "^2.0.10",
+    "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.2.0",
