--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,6 @@
     "src/assets": true
   },
   "eslint.autoFixOnSave": true,
-  "tslint.autoFixOnSave": true,
+  "tslint.autoFixOnSave": false,
   "editor.tabSize": 2
 }
