--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "resize-observer-polyfill": "^1.1.4",
     "scroll-into-view-if-needed": "^1.0.4",
     "serviceworker-webpack-plugin": "^0.1.6",
-    "sw-toolbox": "^3.4.0"
+    "sw-toolbox": "^3.4.0",
+    "typescript": "2.1.0-dev.20161109"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
@@ -113,10 +114,10 @@
     "svgo-loader": "^1.1.0",
     "ts-loader": "^0.9.1",
     "ts-node": "^1.4.3",
-    "tslint": "^3.15.1",
+    "tslint": "latest",
     "tslint-react": "^1.1.0",
-    "typings": "^2.0.0",
     "typescript": "^2.1.0",
+    "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.2.0",
