--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "ts-node": "^1.4.3",
     "tslint": "latest",
     "tslint-react": "^1.1.0",
-    "typescript": "^2.1.0",
+    "typescript": "2.1",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
