Build is still broken with TS 2.2 dev

--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "resize-observer-polyfill": "^1.1.4",
     "scroll-into-view-if-needed": "^1.0.4",
     "serviceworker-webpack-plugin": "^0.1.6",
-    "sw-toolbox": "^3.4.0",
-    "typescript": "2.1.0-dev.20161109"
+    "sw-toolbox": "^3.4.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
@@ -114,11 +113,11 @@
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.4.0-beta.2",
     "svgo-loader": "^1.1.0",
-    "ts-loader": "^0.9.1",
+    "ts-loader": "^1.2.2",
     "ts-node": "^1.4.3",
     "tslint": "latest",
     "tslint-react": "^1.1.0",
-    "typescript": "2.1",
+    "typescript": "next",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
