--- a/.babelrc
+++ b/.babelrc
@@ -6,8 +6,9 @@
       {
         "modules": false,
         "browsers": [
-          "last 2 Chrome versions",
-          "last 5 Firefox versions"
+          "last 5 Chrome versions",
+          "last 5 Firefox versions",
+          "last 2 Edge versions"
         ]
       }
     ],
