--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "@types/randomcolor": "^0.4.3",
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
@@ -33,6 +34,7 @@
     "lodash": "^4.16.4",
     "material-ui": "^0.16.4",
     "moment": "^2.15.1",
+    "randomcolor": "^0.4.4",
     "react": "^15.4.0",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.0",
