--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "ts-node": "^1.4.3",
     "tslint": "latest",
     "tslint-react": "^1.1.0",
-    "typescript": "next",
+    "typescript": "2.2.0-dev.20161205",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
