--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
     "@types/randomcolor": "^0.4.3",
+    "@types/react-addons-perf": "^0.14.17",
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
@@ -37,6 +38,7 @@
     "randomcolor": "^0.4.4",
     "react": "^15.4.0",
     "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-perf": "^15.4.1",
     "react-dom": "^15.4.0",
     "react-draggable": "^2.2.2",
     "react-dropzone": "^3.6.0",
