Upgrade to typescript@2.1 stable

--- a/package.json
+++ b/package.json
@@ -115,16 +115,16 @@
     "svgo-loader": "^1.1.0",
     "ts-loader": "^1.2.2",
     "ts-node": "^1.4.3",
-    "tslint": "latest",
+    "tslint": "^4.0.2",
     "tslint-react": "^1.1.0",
-    "typescript": "2.2.0-dev.20161205",
+    "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "^2.1.0-beta.27",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-fail-plugin": "^1.0.5",
-    "webpack-hot-middleware": "^2.13.0",
+    "webpack-hot-middleware": "^2.13.2",
     "webpack-html-plugin": "^0.1.1",
     "webpack-validator": "^2.2.9",
     "worker-loader": "^0.7.1"
