--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
+    "enzyme": "^2.6.0",
     "file-saver": "^1.3.3",
     "idb-keyval": "^2.1.2",
+    "jest": "^18.0.0",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
     "material-ui": "^0.16.4",
@@ -37,6 +39,7 @@
     "randomcolor": "^0.4.4",
     "react": "^15.4.0",
     "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.0",
     "react-draggable": "^2.2.2",
     "react-dropzone": "^3.6.0",
@@ -117,7 +120,7 @@
     "ts-node": "^1.4.3",
     "tslint": "^4.0.2",
     "tslint-react": "^2.0.0",
-    "typescript": "^2.1.4",
+    "typescript": "2.2.0-dev.20161214",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.27",
