Expirement with async-module-loader

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/redux": "^3.6.31",
     "@types/redux-actions": "^0.8.30",
     "@types/webpack": "^1.12.35",
+    "async-module-loader": "^2.1.0",
     "autoprefixer": "^6.5.0",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.0.0",
@@ -120,7 +121,7 @@
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.27",
+    "webpack": "beta",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-fail-plugin": "^1.0.5",
