--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
   },
   "eslint.autoFixOnSave": true,
   "tslint.autoFixOnSave": false,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "editor.renderLineHighlight": "all",
+  "editor.scrollBeyondLastLine": false,
+  "files.insertFinalNewline": true
 }
