--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
+    "jest": "^18.0.0",
     "mocha": "^3.1.2",
     "node-sass": "^4.0.0",
     "postcss-loader": "^0.13.0",
