Get jest to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es2016",
     "lib": [
         "es5",
         "es2015",
@@ -14,7 +14,7 @@
     "moduleResolution": "node",
     "jsx": "react",
     "sourceMap": true,
-    "module": "commonjs",
+    "module": "es2015",
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
     "preserveConstEnums": true,
@@ -38,7 +38,6 @@
   "compileOnSave": true,
   "exclude": [
       "node_modules",
-      "src/**/*.test.ts",
       "build/**"
   ]
 }
