--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "mocha src/**/*.test.* --compilers ts:ts-node/register,tsx:ts-node/register",
+    "test": "jest --config jest.json",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
     "prod": "NODE_ENV=production webpack --bail --progress",
@@ -60,10 +60,10 @@
     "@types/expect": "^1.13.30",
     "@types/express": "^4.0.33",
     "@types/file-saver": "^0.0.0",
+    "@types/jest": "^16.0.2",
     "@types/jszip": "^0.0.31",
     "@types/lodash": "^4.14.37",
     "@types/material-ui": "^0.16.40",
-    "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.45",
     "@types/react": "^0.14.49",
     "@types/react-addons-css-transition-group": "^0.14.18",
@@ -78,7 +78,9 @@
     "async-module-loader": "^2.1.0",
     "autoprefixer": "^6.5.0",
     "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
     "babel-eslint": "^7.0.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-minify-empty-function": "^0.0.1",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
@@ -109,7 +111,6 @@
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "jest": "^18.0.0",
-    "mocha": "^3.1.2",
     "node-sass": "^4.0.0",
     "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
