--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "jest --config jest.json",
+    "test": "NODE_ENV=development karma start --single-run",
+    "test:watch": "NODE_ENV=development karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
     "prod": "NODE_ENV=production webpack --bail --progress",
@@ -57,13 +58,13 @@
     "@types/bluebird": "^3.0.35",
     "@types/bowser": "^1.0.30",
     "@types/classnames": "0.0.31",
-    "@types/expect": "^1.13.30",
+    "@types/expect": "^1.13.31",
     "@types/express": "^4.0.33",
     "@types/file-saver": "^0.0.0",
-    "@types/jest": "^16.0.2",
     "@types/jszip": "^0.0.31",
     "@types/lodash": "^4.14.37",
     "@types/material-ui": "^0.16.40",
+    "@types/mocha": "^2.2.34",
     "@types/node": "^6.0.45",
     "@types/react": "^0.14.49",
     "@types/react-addons-css-transition-group": "^0.14.18",
@@ -110,7 +111,15 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
-    "jest": "^18.0.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
+    "mocha": "^3.2.0",
     "node-sass": "^4.0.0",
     "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
