--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "jest --config jest.json",
-    "test:watch": "jest --config jest.json --watch",
+    "test": "karma start --single-run",
+    "test:watch": "karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
     "prod": "NODE_ENV=production webpack --bail --progress",
@@ -61,7 +61,6 @@
     "@types/expect": "^1.13.30",
     "@types/express": "^4.0.33",
     "@types/file-saver": "^0.0.0",
-    "@types/jest": "^16.0.2",
     "@types/jszip": "^0.0.31",
     "@types/lodash": "^4.14.37",
     "@types/material-ui": "^0.16.40",
@@ -111,7 +110,13 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
-    "jest": "^18.0.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
     "node-sass": "^4.0.0",
     "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
