Get karma to work finally!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,8 @@
     "jsx": "react",
     "inlineSourceMap": true,
     "inlineSources": true,
-    "sourceMap": true,
+    "noEmitOnError": true,
     "module": "es2015",
-    "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
     "preserveConstEnums": true,
     "traceResolution": false,
