--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "karma start --single-run",
-    "test:watch": "karma start --watch --no-single-run",
+    "test": "NODE_ENV=test karma start --single-run",
+    "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
     "prod": "NODE_ENV=production webpack --bail --progress",
@@ -58,12 +58,13 @@
     "@types/bluebird": "^3.0.35",
     "@types/bowser": "^1.0.30",
     "@types/classnames": "0.0.31",
-    "@types/expect": "^1.13.30",
+    "@types/expect": "^1.13.31",
     "@types/express": "^4.0.33",
     "@types/file-saver": "^0.0.0",
     "@types/jszip": "^0.0.31",
     "@types/lodash": "^4.14.37",
     "@types/material-ui": "^0.16.40",
+    "@types/mocha": "^2.2.34",
     "@types/node": "^6.0.45",
     "@types/react": "^0.14.49",
     "@types/react-addons-css-transition-group": "^0.14.18",
