--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "karma-cli": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.1",
     "node-sass": "^4.0.0",
