Add more tests for analysis intepretation

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "NODE_ENV=production karma start --single-run",
-    "test:watch": "NODE_ENV=production karma start --watch --no-single-run",
+    "test": "NODE_ENV=test karma start --single-run",
+    "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
     "prod": "NODE_ENV=production webpack --bail --progress",
