--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
-machine
+machine:
   node:
-    version: 6.1.0
+    - version: 6.1.0
 
-dependencies
+dependencies:
   pre:
     - sudo npm install --global yarn
   override:
