--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "NODE_ENV=test karma start --single-run",
+    "test": "NODE_ENV=test karma start --single-run && npm run ts-coverage-remap",
+    "ts-coverage-remap": "remap-istanbul -i coverage/json/coverage-final.json -o coverage/html-ts -t html",
     "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
@@ -111,17 +112,20 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
+    "istanbul-instrumenter-loader": "^1.2.0",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^1.8.1",
     "node-sass": "^4.0.0",
     "postcss-loader": "^0.13.0",
+    "remap-istanbul": "^0.8.4",
     "sass-loader": "^4.0.2",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
