Try set coverage for CircleCI

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   node:
     version: 6.1.0
+  environment:
+    COVERAGE_DIR: $CIRCLE_ARTIFACTS
 dependencies:
   pre:
     - npm install --global yarn
