Revert "Try alternative coverage set up"
This reverts commit 0d929714434d8056692780dac5f3c4d4ec1f8823.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "NODE_ENV=test karma start --single-run",
+    "test": "NODE_ENV=test karma start --single-run && npm run ts-coverage-remap",
+    "ts-coverage-remap": "remap-istanbul -i ${CIRCLE_ARTIFACTS:=coverage}/json/coverage-final.json -o ${CIRCLE_ARTIFACTS:=coverage}/json/coverage-final.json",
     "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
@@ -120,7 +121,6 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
-    "karma-remap-istanbul": "^0.4.0",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^1.8.1",
     "node-sass": "^4.0.0",
