--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
     "lint": "npm run tslint && npm run eslint",
-    "test": "NODE_ENV=test karma start --single-run && npm run ts-coverage-remap",
-    "ts-coverage-remap": "remap-istanbul -i ${CIRCLE_ARTIFACTS:=coverage}/json/coverage-final.json -o ${CIRCLE_ARTIFACTS:=coverage}/json/coverage-final.json",
+    "test": "NODE_ENV=test karma start --single-run",
     "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
     "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
@@ -121,11 +120,11 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
+    "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^1.8.1",
-    "node-sass": "^4.0.0",
+    "node-sass": "^4.1.1",
     "postcss-loader": "^0.13.0",
-    "remap-istanbul": "^0.8.4",
     "sass-loader": "^4.0.2",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
