Rename definition file to webceph, use in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,10 @@
         "*",
         "src/*"
       ]
-    }
+    },
+    "types": [
+      "./webceph.d.ts"
+    ]
   },
   "compileOnSave": false,
   "exclude": [
