--- a/package.json
+++ b/package.json
@@ -26,124 +26,125 @@
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
     "@types/randomcolor": "^0.4.3",
-    "bluebird": "^3.4.6",
+    "bluebird": "^3.4.7",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
     "file-saver": "^1.3.3",
     "idb-keyval": "^2.3.0",
     "jszip": "^3.1.3",
-    "lodash": "^4.16.4",
-    "material-ui": "^0.16.4",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.16.7",
     "moment": "^2.15.1",
+    "office-ui-fabric-react": "^1.2.2",
     "randomcolor": "^0.4.4",
-    "react": "^15.4.0",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-dom": "^15.4.0",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-draggable": "^2.2.2",
-    "react-dropzone": "^3.6.0",
+    "react-dropzone": "^3.9.1",
     "react-hot-loader": "^3.0.0-beta.5",
-    "react-redux": "5.0.0-rc.1",
+    "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^2.0.1",
-    "recompose": "^0.20.2",
+    "recompose": "^0.21.2",
     "redux": "^3.6.0",
-    "redux-actions": "^0.12.0",
+    "redux-actions": "^1.2.0",
     "redux-undo": "1.0.0-beta7",
     "reselect": "^2.5.4",
-    "resize-observer-polyfill": "^1.1.4",
+    "resize-observer-polyfill": "^1.3.2",
     "scroll-into-view-if-needed": "^1.0.4",
     "serviceworker-webpack-plugin": "^0.1.6",
     "sw-toolbox": "^3.4.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.0.35",
+    "@types/bluebird": "^3.0.37",
     "@types/bowser": "^1.0.30",
-    "@types/classnames": "0.0.31",
-    "@types/expect": "^1.13.31",
-    "@types/express": "^4.0.33",
+    "@types/classnames": "^0.0.32",
+    "@types/expect": "^1.20.0",
+    "@types/express": "^4.0.35",
     "@types/file-saver": "^0.0.0",
-    "@types/jszip": "^0.0.31",
-    "@types/lodash": "^4.14.37",
-    "@types/material-ui": "^0.16.40",
-    "@types/mocha": "^2.2.34",
-    "@types/node": "^6.0.45",
-    "@types/react": "^0.14.49",
-    "@types/react-addons-css-transition-group": "^0.14.18",
-    "@types/react-dom": "^0.14.18",
-    "@types/react-dropzone": "0.0.28",
+    "@types/jszip": "^0.0.32",
+    "@types/lodash": "^4.14.50",
+    "@types/material-ui": "^0.16.47",
+    "@types/mocha": "^2.2.38",
+    "@types/node": "^7.0.1",
+    "@types/react": "^15.0.1",
+    "@types/react-addons-css-transition-group": "^15.0.0",
+    "@types/react-dom": "^0.14.20",
+    "@types/react-dropzone": "^0.0.30",
     "@types/react-redux": "^4.4.32",
     "@types/react-tap-event-plugin": "^0.0.30",
     "@types/recompose": "^0.20.1",
     "@types/redux": "^3.6.31",
-    "@types/redux-actions": "^0.8.30",
-    "@types/webpack": "^1.12.35",
+    "@types/redux-actions": "^1.2.2",
+    "@types/webpack": "^2.2.2",
     "async-module-loader": "^2.1.0",
-    "autoprefixer": "^6.5.0",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
+    "autoprefixer": "^6.7.0",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.0.0",
     "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^6.2.10",
     "babel-plugin-minify-empty-function": "^0.0.1",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-node-env-inline": "^6.8.0",
     "babel-plugin-transform-remove-console": "^6.8.0",
     "babel-plugin-transform-remove-debugger": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-babili": "^0.0.9",
-    "babel-preset-env": "^0.0.9",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-babili": "^0.0.10",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.16.3",
-    "babili": "^0.0.9",
+    "babel-preset-stage-3": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "babili": "^0.0.10",
     "babili-webpack-plugin": "^0.0.7",
     "carte-blanche": "^0.3.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.7.1",
-    "eslint-config-airbnb": "^12.0.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.14.0",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
-    "expect-jsx": "^2.6.0",
+    "expect-jsx": "^3.0.0",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "istanbul-instrumenter-loader": "^1.2.0",
-    "karma": "^1.3.0",
+    "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.1",
+    "karma-mocha-reporter": "^2.2.2",
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
-    "karma-webpack": "^1.8.1",
-    "node-sass": "^4.1.1",
-    "postcss-loader": "^0.13.0",
-    "sass-loader": "^4.0.2",
+    "karma-webpack": "^2.0.1",
+    "node-sass": "^4.3.0",
+    "postcss-loader": "^1.2.2",
+    "sass-loader": "^4.1.1",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.4.0-beta.2",
     "svgo-loader": "^1.1.0",
-    "ts-loader": "^1.2.2",
-    "ts-node": "^1.4.3",
-    "tslint": "^4.0.2",
-    "tslint-react": "^2.0.0",
+    "ts-loader": "^2.0.0",
+    "ts-node": "^2.0.0",
+    "tslint": "^4.3.1",
+    "tslint-react": "^2.3.0",
     "typescript": "^2.1.5",
-    "typings": "^2.0.0",
+    "typings": "^2.1.0",
     "url-loader": "^0.5.7",
     "webpack": "2",
-    "webpack-dashboard": "^0.2.0",
-    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dashboard": "^0.2.1",
+    "webpack-dev-middleware": "^1.9.0",
     "webpack-fail-plugin": "^1.0.5",
-    "webpack-hot-middleware": "^2.13.2",
+    "webpack-hot-middleware": "^2.15.0",
     "webpack-html-plugin": "^0.1.1",
-    "webpack-validator": "^2.2.9",
+    "webpack-validator": "^2.3.0",
     "worker-loader": "^0.7.1"
   }
 }
