--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-draggable": "^2.2.2",
     "react-dropzone": "^3.9.1",
     "react-hot-loader": "^3.0.0-beta.5",
+    "react-hotkeys": "^0.9.0",
     "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.21.2",
