Continue work on Image Picker

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
-    "@types/randomcolor": "^0.4.3",
     "bluebird": "^3.4.7",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
@@ -41,7 +40,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-draggable": "^2.2.2",
-    "react-dropzone": "^3.9.1",
+    "react-dropzone": "^3.9.2",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-hotkeys": "^0.9.0",
     "react-redux": "^5.0.2",
@@ -68,6 +67,7 @@
     "@types/material-ui": "^0.16.47",
     "@types/mocha": "^2.2.38",
     "@types/node": "^7.0.1",
+    "@types/randomcolor": "^0.4.3",
     "@types/react": "^15.0.1",
     "@types/react-addons-css-transition-group": "^15.0.0",
     "@types/react-dom": "^0.14.20",
@@ -88,6 +88,7 @@
     "babel-plugin-minify-empty-function": "^0.0.1",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-node-env-inline": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-plugin-transform-remove-console": "^6.8.0",
     "babel-plugin-transform-remove-debugger": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.22.0",
