--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,9 @@
     "react",
     "stage-3"
   ],
+  "plugins": [
+    "transform-object-rest-spread"
+  ],
   "env": {
     "production": {
       "plugins": [
