Start using react-intl

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dropzone": "^3.9.2",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-hotkeys": "^0.9.0",
+    "react-intl": "^2.2.3",
     "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.22.0",
@@ -73,6 +74,7 @@
     "@types/react-addons-css-transition-group": "^15.0.1",
     "@types/react-dom": "^0.14.22",
     "@types/react-dropzone": "^0.0.31",
+    "@types/react-intl": "^2.2.2",
     "@types/react-redux": "^4.4.36",
     "@types/react-tap-event-plugin": "^0.0.30",
     "@types/recompose": "^0.20.3",
