Add script to extract i18n messages f. components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "inlineSourceMap": true,
     "sourceMap": false,
     "inlineSources": true,
-    "module": "es2015",
+    "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "preserveConstEnums": true,
     "traceResolution": false,
