--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
+    "i18n": "ts-node scripts/locale.ts",
     "lint": "npm run tslint && npm run eslint",
     "test": "NODE_ENV=test karma start --single-run",
     "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
+    "@types/babel-core": "^6.7.14",
     "bluebird": "^3.4.7",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
@@ -61,9 +63,11 @@
     "@types/bluebird": "^3.0.37",
     "@types/bowser": "^1.0.30",
     "@types/classnames": "^0.0.32",
+    "@types/deep-assign": "^0.1.0",
     "@types/expect": "^1.20.0",
     "@types/express": "^4.0.35",
     "@types/file-saver": "^0.0.0",
+    "@types/glob": "^5.0.30",
     "@types/jszip": "^0.0.32",
     "@types/lodash": "^4.14.52",
     "@types/material-ui": "^0.16.48",
@@ -89,6 +93,7 @@
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-minify-empty-function": "^0.0.1",
+    "babel-plugin-react-intl": "^2.3.1",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-node-env-inline": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
@@ -106,6 +111,7 @@
     "babili-webpack-plugin": "^0.0.9",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "deep-assign": "^2.0.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.0.1",
@@ -116,6 +122,7 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.1",
     "file-loader": "^0.10.0",
+    "glob": "^7.1.1",
     "istanbul-instrumenter-loader": "^1.2.0",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
